src/objects/Program__c.object
<CustomObject>
    <description>Homeownership Programs</description>
    <fields>
        <fullName>Assets_Test__c</fullName>
        <label>Asset Test</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combinable_with_these_MOHCD_programs__c</fullName>
        <label>Combinable with these MOHCD Programs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BMR</fullName>
                </value>
                <value>
                    <fullName>MCC</fullName>
                </value>
                <value>
                    <fullName>PIC</fullName>
                </value>
                <value>
                    <fullName>TND</fullName>
                </value>
                <value>
                    <fullName>FRDALP</fullName>
                </value>
                <value>
                    <fullName>DALP</fullName>
                </value>
                <value>
                    <fullName>CSLP</fullName>
                </value>
                <value>
                    <fullName>BMR-DALP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Time_Homebuyer_Requirement__c</fullName>
        <label>First Time Homebuyer Requirement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes (have not owned any property for the last 3 years)</fullName>
                </value>
                <value>
                    <fullName>Yes (have not owned any property in San Francisco for past 3 years)</fullName>
                </value>
                <value>
                    <fullName>Yes (have never owned any property in San Francisco)</fullName>
                </value>
                <value>
                    <fullName>Yes (have never owned a principal residence for the last 3 years)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_Limits__c</fullName>
        <label>Income Limits</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Loan_Amount__c</fullName>
        <label>Max. Loan Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Down_Payment__c</fullName>
        <label>Minimum Down Payment (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Program_Abbreviation__c</fullName>
        <label>Program Abbreviation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Group__c</fullName>
        <label>Program Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Downpayment Assistance</fullName>
                </value>
                <value>
                    <fullName>Tax Credit</fullName>
                </value>
                <value>
                    <fullName>Below Market Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Price_Limits__c</fullName>
        <label>Purchase Price Limits</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Restricted Sales Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Program</label>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>